[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mktemp = "0.4.1"
serde_rusqlite = "0.29.0"
rusqlite = "0.26.0"
z3 = "0.11.2"
z3-sys = "0.7.1"
lazy_static = "1.4.0"

[[bin]]
name = "blinkenlights-server"
path = "src/main.rs"